AV2 a3.0

+ Added water bubble ability
+ Added earth wall ability
* Changed water skills menu background
* Removed some unused assets